[package]
name = "protobuf_sample"
version = "0.1.0"
edition = "2021"
description = "Sample Protocol Buffer messages for the polars_protobuf project"
license = "MIT"

[dependencies]
prost = { version = "*" }
bytes = { version = "*" }
structpath = { path = "../structpath", features = ["derive"] }
structpath_types = { path = "../structpath_types" }

[build-dependencies]
prost-build = { version = "*" }
